tests/NormalTests/paczka1/small_fuzzy/76052913.err
Error in line 2: SnuZ0xVJ28T A659 93,6
Error in line 4: SnuZ0xVJ28T S656 86,9
Error in line 10: W1Ouu6KOgl A130 58,2
Error in line 1: WPxa A659 75,5
